package Modele

class Personnage