

class Partie(id: Int) {
    /*
    private val id: Int
    private var etat: String
    private val grilles: Array<Grille>
    private val personnagesCibles: Array<MonPersonnage>
    private val joueurs: Array<Joueurs>

    init {
        this.id = id
        etat = ""
        grilles = arrayOfNulls(2)
        grilles[0] =
    }

    fun demarrerPartie() {
        TODO()
    }

    fun terminerPartie() {
        TODO()
    }

    fun changerJoueurActif() {
        TODO()
    }
    */
}